[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://map/Map.gd" type="Script" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://assets/next.png" type="Texture" id=5]
[ext_resource path="res://gui/Mana_Bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Label.gd" type="Script" id=7]
[ext_resource path="res://Action_bar.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 7 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 549, 278 )
frame = 5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 550, 282 )
current = true
zoom = Vector2( 1.2, 1.2 )
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Next_controller" type="Control" parent="Camera2D/CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TouchScreenButton" parent="Camera2D/CanvasLayer/Next_controller"]
position = Vector2( -80, -60 )
scale = Vector2( 4, 4 )
normal = ExtResource( 5 )
shape = SubResource( 1 )

[node name="Mana_bar" type="Control" parent="Camera2D/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana_bar" parent="Camera2D/CanvasLayer/Mana_bar" instance=ExtResource( 6 )]

[node name="Action_bar" type="Control" parent="Camera2D/CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -128.0
margin_right = 23.0
margin_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 256, 128 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Camera2D/CanvasLayer/Action_bar"]
anchor_bottom = 1.0
margin_right = 64.0
margin_bottom = 40.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="released" from="Camera2D/CanvasLayer/Next_controller/Next" to="." method="_on_Next_released"]
